# moonlitspace-legacy

./: LICENSE  README.md  build_files.sh  pyproject.toml  requirements.txt  vercel.json
apps/blog/: admin.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py  0003_alter_blogpost_slug_pinnedposts.py  0004_alter_blogpost_content.py  0004_rename_pinnedposts_pinnedpost.py  0005_blogpost_readtime.py  0006_blogpost_rendered_content.py
apps/blog/templatetags/: markdown_extras.py
apps/newsletter/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/newsletter/migrations/: 0001_initial.py  0002_rename_newsletter_newsletterentry.py  0003_remove_newsletterentry_joined_at_and_more.py  0004_alter_newsletterentry_entry_id.py  0005_alter_newsletterentry_entry_id.py  0006_alter_newsletterentry_entry_id.py  0007_alter_newsletterentry_entry_id.py  0008_alter_newsletterentry_entry_id.py
apps/user/: admin.py  forms.py  models.py
apps/user/migrations/: 0001_initial.py  0004_profile_bio_profile_discord_profile_github_and_more.py  0006_remove_customuser_bio_alter_profile_type.py
blog/: admin.py  models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py  0003_alter_blogpost_readtime_alter_blogpost_slug.py
blog/templates/blog/: blogpost_detail.html  blogpost_list.html  breadcrumbs.html  index.html
blog/templatetags/: breadcrumbs.py  custom_filters.py
core/: context_processors.py  settings.py  urls.py  views.py
django_core/apps/user/: forms.py
django_core/core/: settings.py  urls.py  views.py
django_core/static/css/: index.css
django_core/templates/: base.html
newsletter/: forms.py  urls.py  utils.py  views.py
newsletter/migrations/: 0001_initial.py
newsletter/templates/newsletter/: newsletter.html  state.html
space/: asgi.py  hosts.py  settings.py  views.py  wsgi.py
src/apps/blog/: models.py
src/apps/user/: admin.py  models.py
src/templates/: index.html
static/css/: base.css  index.css
templates/: base.html  index.html  newsletter.html
templates/email/: newsletter_verification.html
templatetags/: markdown_extras.py
user/migrations/: 0001_initial.py
utils/: context_processors.py  mail.py  markdown.py  markdown_to_text.py
(+33 files in other folders)
