[tool.poetry]
name = "moonlitspace"
version = "0.1.0"
description = ""
authors = ["moonlitgrace <moonlitgrace.gaia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
markdown2 = {extras = ["all"], version = "^2.4.13"}
selectolax = "^0.3.21"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
