[tool.poetry]
name = "moonlitspace"
version = "0.1.0"
description = ""
authors = ["moonlitgrace <moonlitgrace.gaia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
markdown2 = {extras = ["all"], version = "^2.5.0"}
selectolax = "^0.3.21"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
poethepoet = "^0.27.0"

[tool.poe.tasks]
dev = "python3 manage.py runserver"
makemigrations = "python3 manage.py makemigrations"
migrate = "python3 manage.py migrate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
