[tool.poetry]
name = "moonlitspace"
version = "0.1.0"
description = ""
authors = ["moonlitgrace <moonlitgrace.gaia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
selectolax = "^0.3.21"
django-environ = "^0.11.2"
mistune = "^3.0.2"
pygments = "^2.18.0"
readtime = "^3.0.0"
django-stubs-ext = "^5.0.4"
django-stubs = { extras = ["compatible-mypy"], version = "^5.0.4" }
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"
catppuccin = {extras = ["pygments"], version = "^2.3.0"}
django-hosts = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
poethepoet = "^0.27.0"

[tool.poe.tasks]
dev = "python3 manage.py runserver"
makemigrations = "python3 manage.py makemigrations"
migrate = "python3 manage.py migrate"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "space.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
